<resources>
    <string name="app_name">AgeInMinutes</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="age">AGE</string>
    <string name="dob">1/12/2019</string>
    <string name="selected_date">SELECTED DATE</string>
    <string name="min.">1440</string>
    <string name="select_date">SELECT DATE</string>
    <string name="pic">CLICK TO TAKE A PIC</string>
    <string name="in_min_till_date">IN MINUTES TILL DATE</string>
    <string name="user_image">User Image</string>
    <string name="your_age_in_min">Your Age In Minutes Is</string>
</resources>